[package]
name = "gitlab-api"
version = "0.2.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dev-dependencies]
env_logger = "0.3"

[dependencies]
log = "0.3"
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_json = "0.8"
serde_urlencoded = "0.3"
# See https://github.com/colin-kiegel/rust-derive-builder/pull/29
# derive_builder = "0.2"
derive_builder = { git = "https://github.com/nbigaouette/rust-derive-builder.git", rev = "249d9fc03b9e7ae54f170dc68c87f24d2e4be4a0"}
custom_derive = "0.1"


hyper = "0.9"
# On OSX, use the following:
# hyper = { version = "0.9", default-features = false, features = ["security-framework"] }

clippy = {version = "*", optional = true}
