[package]
name = "gitlab-api"
version = "0.2.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dev-dependencies]
env_logger = "0.3"

[dependencies]
log = "0.3"
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_json = "0.8"
serde_urlencoded = "0.3"
# See https://github.com/colin-kiegel/rust-derive-builder/pull/29
# derive_builder = "0.2"

clippy = {version = "*", optional = true}

# Compilation on OSX will fail in case you don't do one of these two things:
# 1) Use this instead to link against "security-framework":
#        hyper = { version = "0.9.13", default-features = false, features = ["security-framework"] }
# 2) Install OpenSSL using homebrew and export these variables:
#        export OPENSSL_INCLUDE_DIR=`brew --prefix openssl`/include
#        export OPENSSL_LIB_DIR=`brew --prefix openssl`/lib
#        export DEP_OPENSSL_INCLUDE=`brew --prefix openssl`/include
# See http://stackoverflow.com/q/39709542/178154
hyper = "0.9.13"
