[package]
name = "gitlab-api"
version = "0.6.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
description = "Wrapper for GitLab API v3"
license = "MIT/Apache-2.0"
repository = "https://github.com/nbigaouette/gitlab-api-rs"
readme = "README.md"
keywords = ["gitlab", "git"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "nbigaouette/gitlab-api-rs" }

[dev-dependencies]
env_logger = "0.4"
clap = "2.20.1"

[dependencies]
log = "0.3"
error-chain = "0.8"
regex = "0.2.1"
url = "1.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_urlencoded = "0.4"

# Compilation on OSX will fail in case you don't do one of these two things:
# 1) Use this instead to link against "security-framework":
#        hyper = { version = "0.9.13", default-features = false, features = ["security-framework"] }
# 2) Install OpenSSL using homebrew and export these variables:
#        export OPENSSL_INCLUDE_DIR=`brew --prefix openssl`/include
#        export OPENSSL_LIB_DIR=`brew --prefix openssl`/lib
#        export DEP_OPENSSL_INCLUDE=`brew --prefix openssl`/include
# See http://stackoverflow.com/q/39709542/178154
hyper = "0.9.13"
